Removed top value from nav-background-texture in iOS flicker fix attempt

--- a/styles.css
+++ b/styles.css
@@ -248,7 +248,6 @@ a {
 
 #nav-background-texture{
     position: absolute;
-    top: 0;
     height: 100%;
     width: 100%;
 
